<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"

    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/user"
            android:title="@string/MyProfile" />

    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/rateme"
            android:orderInCategory="100"
            android:icon="@drawable/rateus"
            android:title="@string/rateus"
            app:showAsAction="never" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_1"
            android:title="@string/logout" />

<!--        <item-->
<!--            android:id="@+id/translator"-->
<!--            android:icon="@drawable/transl"-->
<!--            android:title="Language" />-->
    </group>



</menu>
