<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_teacherprofile"
   >
    <ScrollView android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                style="@style/headerText"
                android:text="Account Info"
                android:layout_marginBottom="20dp"/>

            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/nameImageView"
                    android:src="@drawable/ic_name"
                    style="@style/profileDetailsImage"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:text="@string/name"
                    android:layout_toRightOf="@id/nameImageView"
                    style="@style/profileDetailsTextMain" />

                <TextView
                    android:text="developer"
                    android:layout_toRightOf="@id/nameImageView"
                    android:id="@+id/tvSVchildNames"
                    style="@style/profileDetailsMiniText" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/mobileImageView"
                    android:src="@drawable/ic_mobile"
                    style="@style/profileDetailsImage"
                    app:tint="@color/black" />

                <TextView
                    android:text="@string/mobile"
                    android:layout_toRightOf="@id/mobileImageView"
                    style="@style/profileDetailsTextMain"/>

                <TextView
                    android:text="+91-8129999999"
                    android:id="@+id/tvSVchildFatherMno"
                    android:layout_toRightOf="@id/mobileImageView"
                    style="@style/profileDetailsMiniText" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/emailImageView"
                    android:src="@drawable/ic_email"
                    style="@style/profileDetailsImage"
                    app:tint="@color/black" />

                <TextView
                    android:text="@string/email"
                    android:layout_toRightOf="@id/emailImageView"
                    style="@style/profileDetailsTextMain" />

                <TextView
                    android:text="developer@appsnipp.com"
                    android:id="@+id/tvSVchildEmailAdds"
                    android:layout_toRightOf="@id/emailImageView"
                    style="@style/profileDetailsMiniText" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/addressImageView"
                    android:src="@drawable/ic_address"
                    style="@style/profileDetailsImage"
                    app:tint="@color/black" />

                <TextView
                    android:text="@string/address"
                    android:layout_toRightOf="@id/addressImageView"
                    style="@style/profileDetailsTextMain" />

                <TextView
                    android:text="Avenue 2nd Street NW SY."
                    android:id="@+id/tv_tech_parmanentaddress"
                    android:layout_toRightOf="@id/addressImageView"
                    style="@style/profileDetailsMiniText" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/dobImageView"
                    android:src="@drawable/ic_dob"
                    style="@style/profileDetailsImage"
                    app:tint="@color/black" />

                <TextView
                    android:text="@string/dateofbirth"
                    android:layout_toRightOf="@id/dobImageView"
                    style="@style/profileDetailsTextMain" />

                <TextView
                    android:text="12-05-1990"
                    android:id="@+id/tvSVchildDOB"
                    android:layout_toRightOf="@id/dobImageView"
                    style="@style/profileDetailsMiniText" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/fatherdetail"
                    android:foregroundTint="@color/black"
                    android:foregroundTintMode="src_atop"
                    android:backgroundTintMode="src_atop"
                    android:foregroundGravity="center"
                    android:backgroundTint="@color/black"
                    android:foreground="@color/black"
                    android:src="@drawable/fathers"
                    style="@style/profileDetailsImage"
                    app:tint="@color/black" />

                <TextView
                    android:text="@string/fathername"
                    android:layout_toRightOf="@id/fatherdetail"
                    style="@style/profileDetailsTextMain" />

                <TextView
                    android:text="Contact Number"
                    android:id="@+id/fathersdetails"
                    android:layout_toRightOf="@id/fatherdetail"
                    style="@style/profileDetailsMiniText" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/fatherdetaail"
                    android:foregroundTint="@color/black"
                    android:foregroundTintMode="src_atop"
                    android:backgroundTintMode="src_atop"
                    android:foregroundGravity="center"
                    android:visibility="invisible"
                    android:backgroundTint="@color/black"
                    android:foreground="@color/black"
                    android:src="@drawable/fathers"
                    style="@style/profileDetailsImage" />

                <TextView
                    android:text="Father Name"
                    android:visibility="invisible"
                    android:layout_toRightOf="@id/fatherdetaail"
                    style="@style/profileDetailsTextMain" />

                <TextView
                    android:text="Contact Number"
                    android:visibility="invisible"
                    android:layout_toRightOf="@id/fatherdetaail"
                    style="@style/profileDetailsMiniText" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.core.widget.NestedScrollView>